[gd_scene load_steps=5 format=3 uid="uid://dpas0r8hd2wfb"]

[ext_resource type="Script" uid="uid://ds8yajs11s4ln" path="res://autoload/ContentWindow/content_window.gd" id="1_nohtv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_305yc"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rd53p"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21egt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="AddVersionMes" type="Window"]
auto_translate_mode = 1
title = "标题"
initial_position = 2
size = Vector2i(500, 300)
script = ExtResource("1_nohtv")

[node name="Control" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_305yc")

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="item_add_pos" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="accept" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_styles/focus = SubResource("StyleBoxFlat_rd53p")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rd53p")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_rd53p")
theme_override_styles/hover = SubResource("StyleBoxFlat_rd53p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rd53p")
theme_override_styles/normal = SubResource("StyleBoxFlat_rd53p")
text = " 确定 "

[node name="refuse" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_styles/focus = SubResource("StyleBoxFlat_21egt")
theme_override_styles/disabled = SubResource("StyleBoxFlat_21egt")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_21egt")
theme_override_styles/hover = SubResource("StyleBoxFlat_21egt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_21egt")
theme_override_styles/normal = SubResource("StyleBoxFlat_21egt")
text = " 取消 "

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/refuse" to="." method="_on_refuse_pressed"]
